test/spec_vectors/store/fail/module_11.wat
(module (memory 1) (func (param f64) (result f64) (f64.store (i32.const 0) (f64.const 1))))